2020-11-22  b606  <7627533+b606@users.noreply.github.com>

	* About.xml:
	* SteamDescription.txt: Updated description files.

2020-10-29  b606  <7627533+b606@users.noreply.github.com>

	* README.md: Fix: ReGex elisions for "(à|À) <tag>le(s?) "
	separated with a text color tag should work properly.

2020-09-26  b606  <7627533+b606@users.noreply.github.com>

	* About.xml: Update to version 1.2.
	First names starting with 'H' or short names starting with
	a vowel do not require elision. Ex. "le chapeau de Anne" or
	"le chapeau de Hector" instead of "le chapeau d'Anne" or
	"le chapeau d'Hector".

2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French_Mod.mdproj: Added
	About/PublishedField.txt

2020-05-05  b606  <7627533+b606@users.noreply.github.com>

	* About.xml: Better text formatting. Added urls.

2020-05-03  b606  <7627533+b606@users.noreply.github.com>

	* About.xml:
	* Preview.png:
	* Preview.xcf:
	* Preview-1.1.0.png:
	* Tribal-v1.0.1.png:
	* LanguageWorker_French_Mod.mdproj:
	* Elision-v1.0.0.png:
	* QuestTitle-v1.0.1.png:
	* AnimalEpicene-1.0.3.png:
	* PawnKind.Label-v1.0.2.png:
	* LWKR_French_Mod_banner.png:
	* LWKR_French_Mod_folders.png:
	* Planet-Settlemet-v1.0.1.png:
	* Caravan-TraderShio-v1.0.1.png: Update About.xml, preview
	image and screenshots.

2020-05-02  b606  <7627533+b606@users.noreply.github.com>

	* About.xml:
	* Preview.png:
	* Preview.xcf:
	* LanguageWorker_French_Mod.mdproj: Added mod description and
	preview image.

	* TestReport.html:
	* LanguageInfo.xml:
	* TestReport-ArtNames.html:
	* TestReport-FactionName.html: Moved docs out of the mod
	subfolder.

2020-04-27  b606  <7627533+b606@users.noreply.github.com>

	* About.xml:
	* LanguageWorker_French_Mod.mdproj: The name is officially
	changed to LanguageWorker_French_Mod. Patches use Pardeike's
	libHarmony.

2020-04-21  b606  <7627533+b606@users.noreply.github.com>

	* TestReport.html: Added TestReport.html to monitor changes
