@@ -1,3 +1,8 @@
+2020-11-25  b606  <7627533+b606@users.noreply.github.com>
+
+	* About.xml:
+	* SteamDescription.txt: Shorter in-game description.
+
 2020-11-22  b606  <7627533+b606@users.noreply.github.com>
 
 	* About.xml:
